# routes/api.php
@@ -4,6 +4,7 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\UserController;
 use App\Http\Controllers\Api\ClienteController;
+use App\Http\Controllers\Api\ClienteConsultaController;
 
 /*
 |--------------------------------------------------------------------------
@@ -19,8 +20,9 @@ use App\Http\Controllers\Api\ClienteController;
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
-
+//consulta de usuarios
 Route::get('/users', [UserController::class, 'index']);
-
-
+//cadastro de cliente
 Route::post('/cliente', [ClienteController::class, 'store']);
+//consulta de usuario por cpf
+Route::get('/clientes/{cpf}', [ClienteConsultaController::class, 'consultarPorCpf']);
