# storage/api-docs/api-docs.json
@@ -6,6 +6,42 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/api/clientes/{cpf}": {
+            "get": {
+                "tags": [
+                    "Clientes"
+                ],
+                "summary": "Consulta cliente por CPF",
+                "description": "Retorna os dados do cliente a partir do CPF",
+                "operationId": "getClienteByCpf",
+                "parameters": [
+                    {
+                        "name": "cpf",
+                        "in": "path",
+                        "description": "CPF do cliente",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Cliente encontrado",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Cliente"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Cliente não encontrado"
+                    }
+                }
+            }
+        },
         "/api/cliente": {
             "post": {
                 "tags": [
